@@ -103,30 +103,49 @@ public class DSpaceMETSIngester
      * Choose DMD section(s) to crosswalk.
      * <p>
      * The algorithm is:<br>
-     * 1. Find MODS (preferably) or DC as primary DMD.<br>
-     * 2. If (1) succeeds, crosswalk it and ignore all other DMDs with
+     * 1. Use whatever the <code>dmd</code> parameter specifies as the primary DMD.<br>
+     * 2. If (1) is unspecified, find MODS (preferably) or DC as primary DMD.<br>
+     * 3. If (1) or (2) succeeds, crosswalk it and ignore all other DMDs with
      *    same GROUPID<br>
-     * 3. Crosswalk remaining DMDs not eliminated already.
+     * 4. Crosswalk remaining DMDs not eliminated already.
      */
     public void chooseItemDmd(Context context, Item item,
                               METSManifest manifest,
                               AbstractMETSIngester.MdrefManager callback,
-                              Element dmds[])
+                              Element dmds[], PackageParameters params)
         throws CrosswalkException,
                AuthorizeException, SQLException, IOException
     {
         int found = -1;
 
-        // MODS is preferred
-        for (int i = 0; i < dmds.length; ++i)
-            if ("MODS".equals(manifest.getMdType(dmds[i])))
-                found = i;
+        // Check to see what dmdSec the user specified in the 'dmd' parameter
+        String userDmd = null;
+        if (params != null)
+            userDmd = params.getProperty("dmd");
+        if (userDmd != null && userDmd.length() > 0)
+        {
+            for (int i = 0; i < dmds.length; ++i)
+                if (userDmd.equalsIgnoreCase(manifest.getMdType(dmds[i])))
+                    found = i;
+        }
+
+        // MODS is preferred, if nothing specified by user
+        if (found == -1)
+        {
+            for (int i = 0; i < dmds.length; ++i)
+                //NOTE: METS standard actually says this should be MODS (all uppercase). But,
+                // just in case, we're going to be a bit more forgiving.
+                if ("MODS".equalsIgnoreCase(manifest.getMdType(dmds[i])))
+                    found = i;
+        }
 
         // DC acceptable if no MODS
         if (found == -1)
         {
             for (int i = 0; i < dmds.length; ++i)
-                if ("DC".equals(manifest.getMdType(dmds[i])))
+                //NOTE: METS standard actually says this should be DC (all uppercase). But,
+                // just in case, we're going to be a bit more forgiving.
+                if ("DC".equalsIgnoreCase(manifest.getMdType(dmds[i])))
                     found = i;
         }
 
